@@ -9,6 +9,7 @@ Changelog for 1.4.2
 * Display vendor's sku if available on orders and invoices, bug 1218 (Chris T)
 * Fixed error unable to delete order (Chris T)
 * Fixed bug 1223 prices 0 if selected from parts search (Chris T)
+* Fixed issue, cannot log in after creating batch. (Chris T)
 
 
 Chris T is Chris Travers
